// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader5 Loader should render image avatar properly 1`] = `
<div>
  <div
    class="sc-gsTCUz kNzTru"
  >
    <div
      class="sc-bdfBwQ gmwuAc"
    />
  </div>
</div>
`;

exports[`Loader5 Loader should render with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz cvISIw"
  >
    <div
      class="sc-bdfBwQ hNEEYx"
    />
  </div>
</div>
`;

exports[`Loader5 Loader should render with default theme 1`] = `
<div>
  <div
    class="sc-gsTCUz vwiht"
  >
    <div
      class="sc-bdfBwQ gmwuAc"
    />
  </div>
</div>
`;
